spa/base/spa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spa
spec:
  selector:
    app: spa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
