spa/base/spa-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spa
  name: spa
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 80
  type: NodePort
  selector:
    app: spa
