spa/base/spa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spa
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: frontend.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spa
            port:
              number: 80
